[Curl] Crash on synchronous request via ResourceHandle. https://bugs.webkit.org/show_bug.cgi?id=188033

Reviewed by Alex Christensen.

Source/WebCore:

The timing of instantiation of delegate was wrong. Move it inside `delegate` getter().
This bug was introduced at r228577.

Test: http/tests/xmlhttprequest/simple-sync.html

* platform/network/curl/ResourceHandleCurl.cpp:
(WebCore::ResourceHandle::start):
(WebCore::ResourceHandle::delegate):

LayoutTests:

bug/188033 Crash sync xmlhttprequest

* platform/wincairo/TestExpectations:


Canonical link: https://commits.webkit.org/203240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234317 268f45cc-cd09-0410-ab3c-d52691b4dbfc